# p2p

./: Cargo.toml  ENCRYPTION_ROLLOUT_PLAN.md  PROJECT_ROADMAP.md
apps/frontend/: FRONTEND_BACKEND_MODULES.md  FRONTEND_MODULES.md  README.md  app.js  index.html  styles.css
crates/audit_telemetry/: Cargo.toml
crates/audit_telemetry/src/: lib.rs
crates/audit_telemetry/tests/: audit_telemetry_tests.rs
crates/backend_service/: Cargo.toml
crates/backend_service/src/: lib.rs  main.rs
crates/backend_service/tests/: backend_service_tests.rs
crates/crypto_envelope/: Cargo.toml
crates/crypto_envelope/src/: lib.rs
crates/crypto_envelope/tests/: crypto_envelope_tests.rs
crates/desktop_ui/: Cargo.toml
crates/desktop_ui/src/: lib.rs
crates/desktop_ui/tests/: desktop_ui_tests.rs
crates/discovery/src/: lib.rs
crates/discovery/tests/: discovery_tests.rs
crates/handshake/: Cargo.toml
crates/handshake/src/: lib.rs
crates/handshake/tests/: handshake_tests.rs
crates/identity/: Cargo.toml
crates/identity/src/: lib.rs
crates/identity/tests/: identity_tests.rs
crates/installer_update/: Cargo.toml
crates/installer_update/src/: lib.rs
crates/installer_update/tests/: installer_update_tests.rs
crates/integration_suite/: Cargo.toml
crates/integration_suite/src/: lib.rs
crates/integration_suite/tests/: integration_suite_tests.rs
crates/lan_offline/: Cargo.toml
crates/lan_offline/src/: lib.rs
crates/lan_offline/tests/: lan_offline_tests.rs
crates/large_file_manager/: Cargo.toml
crates/nat_traversal/: Cargo.toml
crates/transfer/: Cargo.toml
(+6 files in other folders)
